--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.4",
@@ -18,6 +19,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
+    "helmet": "^3.21.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
