--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "minhaloja",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.16.3"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "launch": "SET DEBUG=minhaloja:* & npm run dev"
+    "launch": "SET DEBUG=minhaloja:* & npm run dev",
+    "vai": "SET NODE_ENV=production & npm run dev"
   },
   "dependencies": {
     "axios": "^0.19.2",
