--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production & node ./bin/www",
+    "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "launch": "SET DEBUG=minhaloja:* & npm run dev"
   },
