--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^6.0.0",
