enabled ssl on database options

--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,9 @@
   "production": {
     "dialect": "postgres",
     "use_env_variable": "DATABASE_URL",
+    "ssl": true,
     "dialectOptions": {
-      "ssl": {
-        "rejectUnauthorized": false
-      }
+      "ssl": true
     }
   }
 }
