--- a/config/config.json
+++ b/config/config.json
@@ -15,10 +15,6 @@
   },
   "production": {
     "dialect": "postgres",
-    "use_env_variable": "DATABASE_URL",
-    "ssl": true,
-    "dialectOptions": {
-      "ssl": true
-    }
+    "use_env_variable": "DATABASE_URL"
   }
 }
