--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,11 @@
   },
   "production": {
     "dialect": "postgres",
-    "use_env_variable": "DATABASE_URL"
+    "use_env_variable": "DATABASE_URL",
+    "dialectOptions": {
+      "ssl": {
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
