still trying to fix ssl on heroku postgres db

--- a/config/config.json
+++ b/config/config.json
@@ -17,9 +17,7 @@
     "dialect": "postgres",
     "use_env_variable": "DATABASE_URL",
     "dialectOptions": {
-      "ssl": {
-        "rejectUnauthorized": false
-      }
+      "ssl": true
     }
   }
 }
