added rejectUnauthorized=false to db connection

--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,9 @@
     "dialect": "postgres",
     "use_env_variable": "DATABASE_URL",
     "dialectOptions": {
-      "ssl": true
+      "ssl": {
+        "rejectUnauthorized": false
+      }
     }
   }
 }
