--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "launch": "SET DEBUG=minhaloja:* & npm run dev"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
@@ -30,12 +30,13 @@
     "passport-local": "^1.0.0",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
-    "pug": "^2.0.4",
+    "pug": "^3.0.2",
     "sequelize": "^5.21.3",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
